More properly fix hover jumps

--- a/res/css/views/rooms/_EditMessageComposer.scss
+++ b/res/css/views/rooms/_EditMessageComposer.scss
@@ -26,13 +26,6 @@ limitations under the License.
     // padding 6px + mx_BasicMessageComposer_input padding 2px
     top: -4px;
 
-    &:hover {
-        // A 4px border appears on the event tile if it's being hovers
-        // that shifts the whole event to the right and therefore we
-        // try to balance that here to avoid any movement
-        left: -4px;
-    }
-
     .mx_BasicMessageComposer {
         .mx_BasicMessageComposer_input {
             border-radius: 4px;
